# englishLearn

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: package-windows.yml
.superpowers/sdd/: production-task-2-report.md  progress.md
packaging/: listening_cloze.iss  listening_cloze.spec  windows_build.py
src/listening_cloze/: __init__.py  __main__.py  content_cli.py  qt_environment.py  runtime.py
tests/: conftest.py  test_package.py
tests/application/: test_asset_health.py  test_bootstrap.py  test_practice_engine.py  test_qt_controller.py
tests/content_pipeline/: test_ami_source.py  test_cet_extension.py  test_dedupe.py  test_dialog_source_parsers.py  test_historical_replay.py  test_labeled_source_parsers.py  test_lexical_recall.py  test_medquad_source.py  test_pipeline.py  test_pipeline_e2e.py  test_production_classification.py  test_production_sources.py  test_recall_review.py  test_release_data.py  test_release_provenance.py  test_scenes.py  test_sciq_source.py  test_second_wave_source_integration.py  test_semantic_recall.py  test_source_lock_additive_refresh.py  test_sources.py  test_stackexchange_api_source.py  test_stackexchange_source.py  test_targeted_source_integration.py  test_taskmaster_source.py  test_translation.py  test_work_database.py
tests/domain/: test_answers.py  test_feedback.py  test_models.py  test_selection.py  test_session.py
tests/infrastructure/: test_audio_cache.py  test_database.py  test_logging_config.py  test_paths.py  test_supertonic_backend.py  (+2 more)
tools/: run_app.py  run_tests.py
(+135 files in other folders)
